Everything basically done

--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,5 @@
 <html><head> Hello</head>
-<body>
+<body style="background-color:lightgrey">
 <p>
 Welcome to our beautiful website!
 </p><p>A Friendgineer social network
