--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
     }
   </style>
 </head>
-<body>
+<body style='background-color:lightgrey'>
   <div id="Login">
-    <h1>Please enter your username and password</h1>
+    <h1 style='color:Navy'>Please enter your username and password</h1>
     <form name="Login" action="login.cgi" method="post"> </br>
       Username: <input type="text" name="username"></br>
       Password: <input type="password" name="password"></br>
@@ -22,7 +22,7 @@
     </form>
   </div>
   <div id="Registration">
-    <h1>Make an account if you don't already have one!</h1>
+    <h1 style='color:Navy'>Make an account if you don't already have one!</h1>
     <form name="Register" action="register.cgi" method="post"> </br>
       Username: <input type="text" name="username"></br>
       Password: <input type="password" name="password"></br>
